Refactor appsettings.json to organize MongoDbSettings and Jwt configuration

--- a/ApplicationInterface/appsettings.json
+++ b/ApplicationInterface/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+    "MongoDbSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "InventoryDb"
+  },
+    "Jwt": {
+    "Key": "super_secret_key_change_this_in_prod_32+chars",
+    "Issuer": "InventoryApi",
+    "Audience": "InventoryApiUsers",
+    "ExpiryMinutes": 60
+  },
   "AllowedHosts": "*"
 }
